includedir = $(prefix)/include/requiem-logeater

noinst_HEADERS = 	\
        common.h 	\
	logeater-alert.h	\
	logeater-charset.h	\
        logeater-options.h 	\
	log-entry.h	\
	log-source.h	\
	log-plugins.h	\
        regex.h 	\
        udp-server.h 	\
        file-server.h 	

include_HEADERS = requiem-logeater.h


-include $(top_srcdir)/git.mk
